--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="kartu profil">
+  <div class="kartu-profil">
    <img src="foto.jpg" alt="foto">
    <hl>nama anda</hl>
    <p>siswa yang tertarik dgn teknologi.selamat datang</p>
