--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
   <div class="kartu-profil">
    <img src="foto.jpg" alt="foto">
-   <hl>nama anda</hl>
-   <p>siswa yang tertarik dgn teknologi.selamat datang</p>
-   <a href="https://www.instagram.com/justineao">kunjungi instagram saya</a>
+   <hl>Justine Airell Orlando</hl>
+   <p>siswa yang SIGMA.</p>
+   <a href="https://www.instagram.com/justineaao">kunjungi instagram saya</a>
    <button id="sapaButton">sapa saya!</button>
   </div>
 <script src="script.js"></script>
