--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <title>Profil Saya - [justineao] </title>
+      <title>Profil Saya - justineao</title>
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
       <div class="kartu-profil">
-      <img src="foto.jpg" alt="foto">
+      <img src="foto.jpg" alt="foto profil saya">
       <hl>Justine Airell Orlando</hl>
-      <p>siswa yang SIGMA.</p>
+      <p>siswa yang Baik.</p>
       <a href="https://www.instagram.com/justineaao">kunjungi instagram saya</a>
       <button id="sapaButton">sapa saya!</button>
-      </div>
+   </div>
 <script src="script.js"></script>
 </body>
 </html>
