--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
       <div class="kartu-profil">
-      <img src="foto.jpg" alt="foto profil saya">
+      <img src="foto.jpg" alt="foto">
       <hl>Justine Airell Orlando</hl>
       <p>siswa yang Baik.</p>
       <a href="https://www.instagram.com/justineaao">kunjungi instagram saya</a>
       <button id="sapaButton">sapa saya!</button>
-   </div>
+  </div>
 <script src="script.js"></script>
 </body>
 </html>
