--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
       <div class="kartu-profil">
-      <img src="foto.jpg" alt="foto">
+      <img src="foto.jpg" alt="foto profil saya">
       <hl>Justine Airell Orlando</hl>
-      <p>siswa yang Baik.</p>
-      <a href="https://www.instagram.com/justineaao">kunjungi instagram saya</a>
+      <p>siswa SMA yang tertarik dengan teknologi dan desain. Selamat datang di website saya!</p>
+      <a href="https://www.instagram.com/justineaao">Kunjungi Instagram Saya</a>
       <button id="sapaButton">sapa saya!</button>
   </div>
 <script src="script.js"></script>
